k8s/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-record-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: user-record-service
  template:
    metadata:
      labels:
        app: user-record-service
    spec:
      containers:
        - name: user-record-container
          image: oreilleewwew/user-record-ms:latest
          ports:
            - containerPort: 9090
