k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-record-service
  labels:
    app: user-record-service
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
  selector:
    app: user-record-service
